@@ -23,104 +23,27 @@
       <property name="currentIndex">
        <number>0</number>
       </property>
-      <widget class="QWidget" name="tab_browse">
-       <attribute name="icon">
-        <iconset theme="dcor">
-         <normaloff>.</normaloff>.</iconset>
-       </attribute>
+      <widget class="QWidget" name="tab_browse_public">
        <attribute name="title">
         <string>Find Data</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_9">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_9">
-          <item>
-           <widget class="QLineEdit" name="lineEdit_public_search">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="acceptDrops">
-             <bool>false</bool>
-            </property>
-            <property name="placeholderText">
-             <string>Search public data on DCOR...</string>
-            </property>
-            <property name="clearButtonEnabled">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeType">
-             <enum>QSizePolicy::Fixed</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>30</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_6">
-            <property name="text">
-             <string>limit results:</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QSpinBox" name="spinBox_public_rows">
-            <property name="minimum">
-             <number>1</number>
-            </property>
-            <property name="maximum">
-             <number>999999</number>
-            </property>
-            <property name="singleStep">
-             <number>100</number>
-            </property>
-            <property name="value">
-             <number>100</number>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="checkBox_public_include_private">
-            <property name="text">
-             <string>include private</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pushButton_public_search">
-            <property name="text">
-             <string>Search</string>
-            </property>
-            <property name="shortcut">
-             <string>Return</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <widget class="FilterChain" name="public_filter_chain" native="true">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
+         <widget class="BrowsePublic" name="panel_browse_public" native="true">
+          <property name="acceptDrops">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -140,6 +63,29 @@
           <property name="topMargin">
            <number>0</number>
           </property>
+          <item>
+           <widget class="QLabel" name="label_5">
+            <property name="text">
+             <string>Show my data</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeType">
+             <enum>QSizePolicy::Fixed</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
           <item>
            <widget class="QCheckBox" name="checkBox_user_owned">
             <property name="text">
@@ -503,12 +449,6 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>FilterChain</class>
-   <extends>QWidget</extends>
-   <header>dcoraid.gui.dbview.filter_chain</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
    <class>UploadWidget</class>
    <extends>QWidget</extends>
    <header>dcoraid.gui.upload.widget_upload</header>
@@ -530,6 +470,12 @@
    <class>FilterChainUser</class>
    <extends>QWidget</extends>
    <header>dcoraid.gui.dbview.filter_chain</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>BrowsePublic</class>
+   <extends>QWidget</extends>
+   <header>dcoraid.gui.browse_public.widget_browse_public</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
